# gwatch

./: CMakeLists.txt  README.md
.github/workflows/: ci-windows.yml
include/: Application.h  ArgumentsParser.h  Logger.h  MemoryWatcher.h  ProcessLauncher.h  Profiling.h  SymbolResolver.h  WinUtil.h
scripts/: build.ps1  build.sh  demo.ps1  demo.sh  perf_check.bat  perf_check.sh
src/: Application.cpp  ArgumentsParser.cpp  Logger.cpp  Profiling.cpp  WindowsMemoryWatcher.cpp  WindowsProcessLauncher.cpp  WindowsSymbolResolver.cpp  main.cpp
tests/: CMakeLists.txt
tests/debugee/: app.cpp  stress.cpp  toy.cpp
tests/src/: ApplicationTest.cpp  ArgumentsParserTest.cpp  LoggerTest.cpp  MemoryWatcherTest.cpp  ProcessLauncherTest.cpp  WindowsMemoryWatcherTest.cpp  WindowsProcessLauncherTest.cpp  WindowsSymbolResolverTest.cpp
